crates/rome_formatter/tests/specs/prettier/js/decorator-comments/comments.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: comments.js

---
# Input
```js
class Something {
    @Annotateme()
    // comment
    static property: Array<string>;
}

```

# Output
```js
class Something {
    @Annotateme()
    // comment
    static property: Array<string>;
}

```

# Errors
```
error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '@'
  ┌─ comments.js:2:5
  │
2 │     @Annotateme()
  │     ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected a class method body but instead found 'static'
  ┌─ comments.js:4:5
  │
4 │     static property: Array<string>;
  │     ^^^^^^ Expected a class method body here

error[SyntaxError]: return types can only be used in TypeScript files
  ┌─ comments.js:4:20
  │
4 │     static property: Array<string>;
  │                    ^^^^^^^^^^^^^^^ remove this type annotation


```


